--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "ts-node src/server/server.ts"
+    "dev": "ts-node src/server/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
     "pm2": "^5.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.9.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
